--- a/ExtractTableInDocFileTest/src/main/resources/sampleDocResults/testtest.doc.html
+++ b/ExtractTableInDocFileTest/src/main/resources/sampleDocResults/testtest.doc.html
@@ -7,4 +7,4 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
 </head>
-<body><html><head><meta charset="UTF-8"></head><body><table border='1'><tbody><tr><td>1</td><td>2</td><td>3</td><td>4</td><td>5</td></tr><tr><td>6</td><td>7</td><td>8</td><td>9</td><td>10</td><td>11</td></tr><tr><td></td><td>12</td><td>13</td><td>14</td><td>15</td><td>16</td></tr></tbody></table></body></html></body></html>
+<body><html><head><meta charset="UTF-8"></head><body><table border='1'><tbody><tr><td>1</td><td>2</td><td>3333333333333333333</td><td>4</td><td>5</td></tr><tr><td>6</td><td>7</td><td>8</td><td>9</td><td>10</td><td>11</td></tr><tr><td rowspan='2'></td><td>_</td><td></td><td></td><td></td><td>__</td></tr><tr><td rowspan='2'></td><td></td><td></td><td>1</td></tr><tr><td rowspan='2'></td><td>__---------------------------------------</td></tr><tr><td rowspan='2'></td><td>12</td><td>13</td><td>14</td><td>15</td><td>16</td></tr></tbody></table></body></html></body></html>
